crates/rascal/src/internal/as2/lexer/snapshots/rascal__internal__as2__lexer__tests__all_samples@block.as.snap
---
source: crates/rascal/src/internal/as2/lexer/tests.rs
expression: tokens
input_file: samples/as2/block.as
---
- kind:
    Keyword: Var
  span:
    start: 93
    end: 96
    file: 0
  raw: var
- kind: Identifier
  span:
    start: 97
    end: 104
    file: 0
  raw: outside
- kind:
    Operator: Assign
  span:
    start: 105
    end: 106
    file: 0
  raw: "="
- kind:
    String: Double
  span:
    start: 107
    end: 116
    file: 0
  raw: visible
- kind: Semicolon
  span:
    start: 116
    end: 117
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 117
    end: 118
    file: 0
  raw: "\n"
- kind: OpenBrace
  span:
    start: 118
    end: 119
    file: 0
  raw: "{"
- kind: Newline
  span:
    start: 119
    end: 120
    file: 0
  raw: "\n"
- kind:
    Keyword: Var
  span:
    start: 124
    end: 127
    file: 0
  raw: var
- kind: Identifier
  span:
    start: 128
    end: 134
    file: 0
  raw: inside
- kind:
    Operator: Assign
  span:
    start: 135
    end: 136
    file: 0
  raw: "="
- kind:
    String: Double
  span:
    start: 137
    end: 146
    file: 0
  raw: visible
- kind: Semicolon
  span:
    start: 146
    end: 147
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 147
    end: 148
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 152
    end: 157
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 157
    end: 158
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 158
    end: 169
    file: 0
  raw: "outside: "
- kind:
    Operator: Add
  span:
    start: 170
    end: 171
    file: 0
  raw: +
- kind: Identifier
  span:
    start: 172
    end: 179
    file: 0
  raw: outside
- kind:
    Operator: Add
  span:
    start: 180
    end: 181
    file: 0
  raw: +
- kind:
    String: Double
  span:
    start: 182
    end: 194
    file: 0
  raw: ", inside: "
- kind:
    Operator: Add
  span:
    start: 195
    end: 196
    file: 0
  raw: +
- kind: Identifier
  span:
    start: 197
    end: 203
    file: 0
  raw: inside
- kind: CloseParen
  span:
    start: 203
    end: 204
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 204
    end: 205
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 205
    end: 206
    file: 0
  raw: "\n"
- kind: CloseBrace
  span:
    start: 206
    end: 207
    file: 0
  raw: "}"
- kind: Newline
  span:
    start: 207
    end: 208
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 208
    end: 213
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 213
    end: 214
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 214
    end: 225
    file: 0
  raw: "outside: "
- kind:
    Operator: Add
  span:
    start: 226
    end: 227
    file: 0
  raw: +
- kind: Identifier
  span:
    start: 228
    end: 235
    file: 0
  raw: outside
- kind:
    Operator: Add
  span:
    start: 236
    end: 237
    file: 0
  raw: +
- kind:
    String: Double
  span:
    start: 238
    end: 250
    file: 0
  raw: ", inside: "
- kind:
    Operator: Add
  span:
    start: 251
    end: 252
    file: 0
  raw: +
- kind: Identifier
  span:
    start: 253
    end: 259
    file: 0
  raw: inside
- kind: CloseParen
  span:
    start: 259
    end: 260
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 260
    end: 261
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 261
    end: 262
    file: 0
  raw: "\n"
