crates/rascal/src/internal/as2/lexer/snapshots/rascal__internal__as2__lexer__tests__all_samples@constant_folding.as.snap
---
source: crates/rascal/src/internal/as2/lexer/tests.rs
expression: tokens
input_file: samples/as2/constant_folding.as
---
- kind: Identifier
  span:
    start: 0
    end: 5
  raw: trace
- kind: OpenParen
  span:
    start: 5
    end: 6
  raw: (
- kind:
    Operator: LogicalNot
  span:
    start: 6
    end: 7
  raw: "!"
- kind: Identifier
  span:
    start: 7
    end: 11
  raw: "true"
- kind: CloseParen
  span:
    start: 11
    end: 12
  raw: )
- kind: Semicolon
  span:
    start: 12
    end: 13
  raw: ;
- kind: Newline
  span:
    start: 13
    end: 14
  raw: "\n"
- kind: Identifier
  span:
    start: 14
    end: 19
  raw: trace
- kind: OpenParen
  span:
    start: 19
    end: 20
  raw: (
- kind:
    Operator: LogicalNot
  span:
    start: 20
    end: 21
  raw: "!"
- kind: Identifier
  span:
    start: 21
    end: 26
  raw: "false"
- kind: CloseParen
  span:
    start: 26
    end: 27
  raw: )
- kind: Semicolon
  span:
    start: 27
    end: 28
  raw: ;
- kind: Newline
  span:
    start: 28
    end: 29
  raw: "\n"
