crates/rascal/src/internal/as2/lexer/snapshots/rascal__internal__as2__lexer__tests__all_samples@delete.as.snap
---
source: crates/rascal/src/internal/as2/lexer/tests.rs
expression: tokens
input_file: samples/as2/delete.as
---
- kind:
    Keyword: Var
  span:
    start: 0
    end: 3
    file: 0
  raw: var
- kind: Identifier
  span:
    start: 4
    end: 7
    file: 0
  raw: num
- kind:
    Operator: Assign
  span:
    start: 8
    end: 9
    file: 0
  raw: "="
- kind: Integer
  span:
    start: 10
    end: 11
    file: 0
  raw: "1"
- kind: Semicolon
  span:
    start: 11
    end: 12
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 12
    end: 13
    file: 0
  raw: "\n"
- kind:
    Keyword: Var
  span:
    start: 13
    end: 16
    file: 0
  raw: var
- kind: Identifier
  span:
    start: 17
    end: 20
    file: 0
  raw: obj
- kind:
    Operator: Assign
  span:
    start: 21
    end: 22
    file: 0
  raw: "="
- kind: OpenBrace
  span:
    start: 23
    end: 24
    file: 0
  raw: "{"
- kind: Identifier
  span:
    start: 24
    end: 27
    file: 0
  raw: num
- kind: Colon
  span:
    start: 27
    end: 28
    file: 0
  raw: ":"
- kind: Integer
  span:
    start: 29
    end: 30
    file: 0
  raw: "1"
- kind: CloseBrace
  span:
    start: 30
    end: 31
    file: 0
  raw: "}"
- kind: Semicolon
  span:
    start: 31
    end: 32
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 32
    end: 33
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 33
    end: 38
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 38
    end: 39
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 39
    end: 53
    file: 0
  raw: "delete num: "
- kind:
    Operator: Add
  span:
    start: 54
    end: 55
    file: 0
  raw: +
- kind: OpenParen
  span:
    start: 56
    end: 57
    file: 0
  raw: (
- kind:
    Keyword: Delete
  span:
    start: 57
    end: 63
    file: 0
  raw: delete
- kind: Identifier
  span:
    start: 64
    end: 67
    file: 0
  raw: num
- kind: CloseParen
  span:
    start: 67
    end: 68
    file: 0
  raw: )
- kind: CloseParen
  span:
    start: 68
    end: 69
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 69
    end: 70
    file: 0
  raw: ;
- kind: Identifier
  span:
    start: 79
    end: 84
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 84
    end: 85
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 85
    end: 99
    file: 0
  raw: "delete obj: "
- kind:
    Operator: Add
  span:
    start: 100
    end: 101
    file: 0
  raw: +
- kind: OpenParen
  span:
    start: 102
    end: 103
    file: 0
  raw: (
- kind:
    Keyword: Delete
  span:
    start: 103
    end: 109
    file: 0
  raw: delete
- kind: Identifier
  span:
    start: 110
    end: 113
    file: 0
  raw: obj
- kind: CloseParen
  span:
    start: 113
    end: 114
    file: 0
  raw: )
- kind: CloseParen
  span:
    start: 114
    end: 115
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 115
    end: 116
    file: 0
  raw: ;
- kind:
    Keyword: Var
  span:
    start: 125
    end: 128
    file: 0
  raw: var
- kind: Identifier
  span:
    start: 129
    end: 132
    file: 0
  raw: obj
- kind:
    Operator: Assign
  span:
    start: 133
    end: 134
    file: 0
  raw: "="
- kind: OpenBrace
  span:
    start: 135
    end: 136
    file: 0
  raw: "{"
- kind: Identifier
  span:
    start: 136
    end: 139
    file: 0
  raw: num
- kind: Colon
  span:
    start: 139
    end: 140
    file: 0
  raw: ":"
- kind: Integer
  span:
    start: 141
    end: 142
    file: 0
  raw: "1"
- kind: CloseBrace
  span:
    start: 142
    end: 143
    file: 0
  raw: "}"
- kind: Semicolon
  span:
    start: 143
    end: 144
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 144
    end: 145
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 145
    end: 150
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 150
    end: 151
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 151
    end: 169
    file: 0
  raw: "delete obj.num: "
- kind:
    Operator: Add
  span:
    start: 170
    end: 171
    file: 0
  raw: +
- kind: OpenParen
  span:
    start: 172
    end: 173
    file: 0
  raw: (
- kind:
    Keyword: Delete
  span:
    start: 173
    end: 179
    file: 0
  raw: delete
- kind: Identifier
  span:
    start: 180
    end: 183
    file: 0
  raw: obj
- kind: Period
  span:
    start: 183
    end: 184
    file: 0
  raw: "."
- kind: Identifier
  span:
    start: 184
    end: 187
    file: 0
  raw: num
- kind: CloseParen
  span:
    start: 187
    end: 188
    file: 0
  raw: )
- kind: CloseParen
  span:
    start: 188
    end: 189
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 189
    end: 190
    file: 0
  raw: ;
- kind:
    Keyword: Var
  span:
    start: 199
    end: 202
    file: 0
  raw: var
- kind: Identifier
  span:
    start: 203
    end: 206
    file: 0
  raw: obj
- kind:
    Operator: Assign
  span:
    start: 207
    end: 208
    file: 0
  raw: "="
- kind: OpenBrace
  span:
    start: 209
    end: 210
    file: 0
  raw: "{"
- kind: Identifier
  span:
    start: 210
    end: 213
    file: 0
  raw: num
- kind: Colon
  span:
    start: 213
    end: 214
    file: 0
  raw: ":"
- kind: Integer
  span:
    start: 215
    end: 216
    file: 0
  raw: "1"
- kind: CloseBrace
  span:
    start: 216
    end: 217
    file: 0
  raw: "}"
- kind: Semicolon
  span:
    start: 217
    end: 218
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 218
    end: 219
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 219
    end: 224
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 224
    end: 225
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 225
    end: 247
    file: 0
  raw: "delete obj.num + 1: "
- kind:
    Operator: Add
  span:
    start: 248
    end: 249
    file: 0
  raw: +
- kind: OpenParen
  span:
    start: 250
    end: 251
    file: 0
  raw: (
- kind:
    Keyword: Delete
  span:
    start: 251
    end: 257
    file: 0
  raw: delete
- kind: Identifier
  span:
    start: 258
    end: 261
    file: 0
  raw: obj
- kind: Period
  span:
    start: 261
    end: 262
    file: 0
  raw: "."
- kind: Identifier
  span:
    start: 262
    end: 265
    file: 0
  raw: num
- kind:
    Operator: Add
  span:
    start: 266
    end: 267
    file: 0
  raw: +
- kind: Integer
  span:
    start: 268
    end: 269
    file: 0
  raw: "1"
- kind: CloseParen
  span:
    start: 269
    end: 270
    file: 0
  raw: )
- kind: CloseParen
  span:
    start: 270
    end: 271
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 271
    end: 272
    file: 0
  raw: ;
- kind:
    Keyword: Var
  span:
    start: 278
    end: 281
    file: 0
  raw: var
- kind: Identifier
  span:
    start: 282
    end: 285
    file: 0
  raw: obj
- kind:
    Operator: Assign
  span:
    start: 286
    end: 287
    file: 0
  raw: "="
- kind: OpenBrace
  span:
    start: 288
    end: 289
    file: 0
  raw: "{"
- kind: Identifier
  span:
    start: 289
    end: 292
    file: 0
  raw: num
- kind: Colon
  span:
    start: 292
    end: 293
    file: 0
  raw: ":"
- kind: Integer
  span:
    start: 294
    end: 295
    file: 0
  raw: "1"
- kind: CloseBrace
  span:
    start: 295
    end: 296
    file: 0
  raw: "}"
- kind: Semicolon
  span:
    start: 296
    end: 297
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 297
    end: 298
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 298
    end: 303
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 303
    end: 304
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 304
    end: 354
    file: 0
  raw: "delete obj.num == \\\"number\\\" ? \\\":)\\\" : \\\":(\\\": "
- kind:
    Operator: Add
  span:
    start: 355
    end: 356
    file: 0
  raw: +
- kind: OpenParen
  span:
    start: 357
    end: 358
    file: 0
  raw: (
- kind:
    Keyword: Delete
  span:
    start: 358
    end: 364
    file: 0
  raw: delete
- kind: Identifier
  span:
    start: 365
    end: 368
    file: 0
  raw: obj
- kind: Period
  span:
    start: 368
    end: 369
    file: 0
  raw: "."
- kind: Identifier
  span:
    start: 369
    end: 372
    file: 0
  raw: num
- kind: Question
  span:
    start: 373
    end: 374
    file: 0
  raw: "?"
- kind:
    String: Double
  span:
    start: 375
    end: 379
    file: 0
  raw: ":)"
- kind: Colon
  span:
    start: 380
    end: 381
    file: 0
  raw: ":"
- kind:
    String: Double
  span:
    start: 382
    end: 386
    file: 0
  raw: ":("
- kind: CloseParen
  span:
    start: 386
    end: 387
    file: 0
  raw: )
- kind: CloseParen
  span:
    start: 387
    end: 388
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 388
    end: 389
    file: 0
  raw: ;
- kind:
    Keyword: Var
  span:
    start: 396
    end: 399
    file: 0
  raw: var
- kind: Identifier
  span:
    start: 400
    end: 403
    file: 0
  raw: obj
- kind:
    Operator: Assign
  span:
    start: 404
    end: 405
    file: 0
  raw: "="
- kind: OpenBrace
  span:
    start: 406
    end: 407
    file: 0
  raw: "{"
- kind: Identifier
  span:
    start: 407
    end: 410
    file: 0
  raw: num
- kind: Colon
  span:
    start: 410
    end: 411
    file: 0
  raw: ":"
- kind: Integer
  span:
    start: 412
    end: 413
    file: 0
  raw: "1"
- kind: CloseBrace
  span:
    start: 413
    end: 414
    file: 0
  raw: "}"
- kind: Semicolon
  span:
    start: 414
    end: 415
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 415
    end: 416
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 416
    end: 421
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 421
    end: 422
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 422
    end: 457
    file: 0
  raw: "delete obj.num + delete obj.num: "
- kind:
    Operator: Add
  span:
    start: 458
    end: 459
    file: 0
  raw: +
- kind: OpenParen
  span:
    start: 460
    end: 461
    file: 0
  raw: (
- kind:
    Keyword: Delete
  span:
    start: 461
    end: 467
    file: 0
  raw: delete
- kind: Identifier
  span:
    start: 468
    end: 471
    file: 0
  raw: obj
- kind: Period
  span:
    start: 471
    end: 472
    file: 0
  raw: "."
- kind: Identifier
  span:
    start: 472
    end: 475
    file: 0
  raw: num
- kind:
    Operator: Add
  span:
    start: 476
    end: 477
    file: 0
  raw: +
- kind:
    Keyword: Delete
  span:
    start: 478
    end: 484
    file: 0
  raw: delete
- kind: Identifier
  span:
    start: 485
    end: 488
    file: 0
  raw: obj
- kind: Period
  span:
    start: 488
    end: 489
    file: 0
  raw: "."
- kind: Identifier
  span:
    start: 489
    end: 492
    file: 0
  raw: num
- kind: CloseParen
  span:
    start: 492
    end: 493
    file: 0
  raw: )
- kind: CloseParen
  span:
    start: 493
    end: 494
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 494
    end: 495
    file: 0
  raw: ;
- kind:
    Keyword: Var
  span:
    start: 501
    end: 504
    file: 0
  raw: var
- kind: Identifier
  span:
    start: 505
    end: 508
    file: 0
  raw: obj
- kind:
    Operator: Assign
  span:
    start: 509
    end: 510
    file: 0
  raw: "="
- kind: OpenBrace
  span:
    start: 511
    end: 512
    file: 0
  raw: "{"
- kind: Identifier
  span:
    start: 512
    end: 515
    file: 0
  raw: num
- kind: Colon
  span:
    start: 515
    end: 516
    file: 0
  raw: ":"
- kind: Integer
  span:
    start: 517
    end: 518
    file: 0
  raw: "1"
- kind: Comma
  span:
    start: 518
    end: 519
    file: 0
  raw: ","
- kind: Identifier
  span:
    start: 520
    end: 525
    file: 0
  raw: trace
- kind: Colon
  span:
    start: 525
    end: 526
    file: 0
  raw: ":"
- kind: Identifier
  span:
    start: 527
    end: 532
    file: 0
  raw: trace
- kind: CloseBrace
  span:
    start: 532
    end: 533
    file: 0
  raw: "}"
- kind: Semicolon
  span:
    start: 533
    end: 534
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 534
    end: 535
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 535
    end: 540
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 540
    end: 541
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 541
    end: 561
    file: 0
  raw: "delete obj.trace: "
- kind:
    Operator: Add
  span:
    start: 562
    end: 563
    file: 0
  raw: +
- kind: OpenParen
  span:
    start: 564
    end: 565
    file: 0
  raw: (
- kind:
    Keyword: Delete
  span:
    start: 565
    end: 571
    file: 0
  raw: delete
- kind: Identifier
  span:
    start: 572
    end: 575
    file: 0
  raw: obj
- kind: Period
  span:
    start: 575
    end: 576
    file: 0
  raw: "."
- kind: Identifier
  span:
    start: 576
    end: 581
    file: 0
  raw: trace
- kind: CloseParen
  span:
    start: 581
    end: 582
    file: 0
  raw: )
- kind: CloseParen
  span:
    start: 582
    end: 583
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 583
    end: 584
    file: 0
  raw: ;
- kind:
    Keyword: Var
  span:
    start: 593
    end: 596
    file: 0
  raw: var
- kind: Identifier
  span:
    start: 597
    end: 600
    file: 0
  raw: obj
- kind:
    Operator: Assign
  span:
    start: 601
    end: 602
    file: 0
  raw: "="
- kind: OpenBrace
  span:
    start: 603
    end: 604
    file: 0
  raw: "{"
- kind: Identifier
  span:
    start: 604
    end: 607
    file: 0
  raw: num
- kind: Colon
  span:
    start: 607
    end: 608
    file: 0
  raw: ":"
- kind: Integer
  span:
    start: 609
    end: 610
    file: 0
  raw: "1"
- kind: Comma
  span:
    start: 610
    end: 611
    file: 0
  raw: ","
- kind: Identifier
  span:
    start: 612
    end: 617
    file: 0
  raw: trace
- kind: Colon
  span:
    start: 617
    end: 618
    file: 0
  raw: ":"
- kind: Identifier
  span:
    start: 619
    end: 624
    file: 0
  raw: trace
- kind: CloseBrace
  span:
    start: 624
    end: 625
    file: 0
  raw: "}"
- kind: Semicolon
  span:
    start: 625
    end: 626
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 626
    end: 627
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 627
    end: 632
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 632
    end: 633
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 633
    end: 655
    file: 0
  raw: "delete obj.trace(): "
- kind:
    Operator: Add
  span:
    start: 656
    end: 657
    file: 0
  raw: +
- kind: OpenParen
  span:
    start: 658
    end: 659
    file: 0
  raw: (
- kind:
    Keyword: Delete
  span:
    start: 659
    end: 665
    file: 0
  raw: delete
- kind: Identifier
  span:
    start: 666
    end: 669
    file: 0
  raw: obj
- kind: Period
  span:
    start: 669
    end: 670
    file: 0
  raw: "."
- kind: Identifier
  span:
    start: 670
    end: 675
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 675
    end: 676
    file: 0
  raw: (
- kind: CloseParen
  span:
    start: 676
    end: 677
    file: 0
  raw: )
- kind: CloseParen
  span:
    start: 677
    end: 678
    file: 0
  raw: )
- kind: CloseParen
  span:
    start: 678
    end: 679
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 679
    end: 680
    file: 0
  raw: ;
