crates/rascal/src/internal/as2/lexer/snapshots/rascal__internal__as2__lexer__tests__all_samples@function.as.snap
---
source: crates/rascal/src/internal/as2/lexer/tests.rs
expression: tokens
input_file: samples/as2/function.as
---
- kind:
    Keyword: Function
  span:
    start: 0
    end: 8
    file: 0
  raw: function
- kind: Identifier
  span:
    start: 9
    end: 13
    file: 0
  raw: test
- kind: OpenParen
  span:
    start: 13
    end: 14
    file: 0
  raw: (
- kind: CloseParen
  span:
    start: 14
    end: 15
    file: 0
  raw: )
- kind: OpenBrace
  span:
    start: 16
    end: 17
    file: 0
  raw: "{"
- kind: Newline
  span:
    start: 17
    end: 18
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 22
    end: 27
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 27
    end: 28
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 28
    end: 42
    file: 0
  raw: Test called!
- kind: CloseParen
  span:
    start: 42
    end: 43
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 43
    end: 44
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 44
    end: 45
    file: 0
  raw: "\n"
- kind:
    Keyword: Return
  span:
    start: 49
    end: 55
    file: 0
  raw: return
- kind:
    String: Double
  span:
    start: 56
    end: 60
    file: 0
  raw: ":)"
- kind: Semicolon
  span:
    start: 60
    end: 61
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 61
    end: 62
    file: 0
  raw: "\n"
- kind: CloseBrace
  span:
    start: 62
    end: 63
    file: 0
  raw: "}"
- kind: Newline
  span:
    start: 63
    end: 64
    file: 0
  raw: "\n"
- kind: Newline
  span:
    start: 64
    end: 65
    file: 0
  raw: "\n"
- kind:
    Keyword: Var
  span:
    start: 65
    end: 68
    file: 0
  raw: var
- kind: Identifier
  span:
    start: 69
    end: 73
    file: 0
  raw: anon
- kind:
    Operator: Assign
  span:
    start: 74
    end: 75
    file: 0
  raw: "="
- kind:
    Keyword: Function
  span:
    start: 76
    end: 84
    file: 0
  raw: function
- kind: OpenParen
  span:
    start: 84
    end: 85
    file: 0
  raw: (
- kind: Identifier
  span:
    start: 85
    end: 86
    file: 0
  raw: a
- kind: Comma
  span:
    start: 86
    end: 87
    file: 0
  raw: ","
- kind: Identifier
  span:
    start: 88
    end: 89
    file: 0
  raw: b
- kind: CloseParen
  span:
    start: 89
    end: 90
    file: 0
  raw: )
- kind: OpenBrace
  span:
    start: 90
    end: 91
    file: 0
  raw: "{"
- kind: Newline
  span:
    start: 91
    end: 92
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 96
    end: 101
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 101
    end: 102
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 102
    end: 130
    file: 0
  raw: Anonymous function called!
- kind: CloseParen
  span:
    start: 130
    end: 131
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 131
    end: 132
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 132
    end: 133
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 137
    end: 142
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 142
    end: 143
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 143
    end: 149
    file: 0
  raw: "a = "
- kind:
    Operator: Add
  span:
    start: 150
    end: 151
    file: 0
  raw: +
- kind: Identifier
  span:
    start: 152
    end: 153
    file: 0
  raw: a
- kind:
    Operator: Add
  span:
    start: 154
    end: 155
    file: 0
  raw: +
- kind:
    String: Double
  span:
    start: 156
    end: 164
    file: 0
  raw: ", b = "
- kind:
    Operator: Add
  span:
    start: 165
    end: 166
    file: 0
  raw: +
- kind: Identifier
  span:
    start: 167
    end: 168
    file: 0
  raw: b
- kind: CloseParen
  span:
    start: 168
    end: 169
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 169
    end: 170
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 170
    end: 171
    file: 0
  raw: "\n"
- kind: CloseBrace
  span:
    start: 171
    end: 172
    file: 0
  raw: "}"
- kind: Semicolon
  span:
    start: 172
    end: 173
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 173
    end: 174
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 174
    end: 178
    file: 0
  raw: anon
- kind: OpenParen
  span:
    start: 178
    end: 179
    file: 0
  raw: (
- kind:
    String: Double
  span:
    start: 179
    end: 183
    file: 0
  raw: aa
- kind: Comma
  span:
    start: 183
    end: 184
    file: 0
  raw: ","
- kind:
    String: Double
  span:
    start: 185
    end: 189
    file: 0
  raw: bb
- kind: CloseParen
  span:
    start: 189
    end: 190
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 190
    end: 191
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 191
    end: 192
    file: 0
  raw: "\n"
- kind: Newline
  span:
    start: 192
    end: 193
    file: 0
  raw: "\n"
- kind: Identifier
  span:
    start: 193
    end: 198
    file: 0
  raw: trace
- kind: OpenParen
  span:
    start: 198
    end: 199
    file: 0
  raw: (
- kind: Identifier
  span:
    start: 199
    end: 203
    file: 0
  raw: test
- kind: OpenParen
  span:
    start: 203
    end: 204
    file: 0
  raw: (
- kind: CloseParen
  span:
    start: 204
    end: 205
    file: 0
  raw: )
- kind:
    Operator: Add
  span:
    start: 206
    end: 207
    file: 0
  raw: +
- kind: Identifier
  span:
    start: 208
    end: 212
    file: 0
  raw: test
- kind: OpenParen
  span:
    start: 212
    end: 213
    file: 0
  raw: (
- kind: CloseParen
  span:
    start: 213
    end: 214
    file: 0
  raw: )
- kind: CloseParen
  span:
    start: 214
    end: 215
    file: 0
  raw: )
- kind: Semicolon
  span:
    start: 215
    end: 216
    file: 0
  raw: ;
- kind: Newline
  span:
    start: 216
    end: 217
    file: 0
  raw: "\n"
- kind: Newline
  span:
    start: 217
    end: 218
    file: 0
  raw: "\n"
- kind:
    Keyword: Function
  span:
    start: 218
    end: 226
    file: 0
  raw: function
- kind: OpenParen
  span:
    start: 226
    end: 227
    file: 0
  raw: (
- kind: CloseParen
  span:
    start: 227
    end: 228
    file: 0
  raw: )
- kind: OpenBrace
  span:
    start: 229
    end: 230
    file: 0
  raw: "{"
- kind: CloseBrace
  span:
    start: 230
    end: 231
    file: 0
  raw: "}"
- kind: Newline
  span:
    start: 231
    end: 232
    file: 0
  raw: "\n"
